--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -25,7 +25,7 @@
 Today, high performance computing centers around the world are leveraging GPU accelerators to reach their peak performance. For example, the Titan supercomputer at Oak Ridge National Lab is (as of this writing) ranked \#2 on the world-wide Top500 list, and achieved that spot with a total of 18,688 NVidia K20 GPUs and 18,688 AMD Opteron CPUs in a 1:1 pairing for a theoretical peak of 27.1 PFLOP/sec \cite{TitanGPUCluster}. 
 In some cases, HPC installations like the Keeneland project \cite{Vetter2011} boast significantly more GPU accelerators than CPU counterparts. The Keeneland Full-Scale (KFS) system has 528 Intel Sandy-Bridge CPUs and 792 NVidia Fermi-class GPUs in 264 compute nodes (i.e., 2:3 CPUs:GPUs), and a theoretical peak of 615 TFLOP/sec \cite{Vetter2011}. 
 
-Ultimately, finding a way to harness the tera- and peta-scale performance from such clusters is a grand challenge for our work on RBF-FD and other RBF PDE methods. To this end we present the first multi-GPU implementation of RBF-FD within this chapter.
+Ultimately, finding a way to harness the tera- and peta-scale performance from such clusters is a grand challenge for our work on RBF-FD and other RBF PDE methods. To this end, we present a multi-GPU implementation of RBF-FD.
 
 In Chapter~\ref{chap:gpu_rbffd}, we have already developed two different approaches to computing RBF-FD on a single GPU: the first using custom OpenCL kernels for RK4 time-steps, and the second using ViennaCL for the same tasks. Then in Chapter~\ref{chap:distributed_rbffd}, we laid the foundation for a distributed RBF-FD that spans the nodes of an HPC cluster, and demonstrated scaling up to 1024 processors (128 nodes). This chapter combines those algorithms to produce the first (to our knowledge) multi-GPU implementation of the RBF-FD method with overlapping communication and computation. 
 
@@ -45,15 +45,13 @@ Our multi-GPU implementation leverages non-blocking MPI communication plus two a
 
 In order to develop the multi-GPU implementation, we return to the idealized test case proposed in Chapter~\ref{chap:distributed_rbffd}: four derivatives on a 3-D regular grid are computed via SpMV and used as the intermediate vectors for an RK4 time-step. At the end of each SpMV a communication collective synchronizes external dependencies for each subdomain.
 
-In Chapter~\ref{chap:distributed_rbffd}, the SpMV was assumed run on the CPU. Herein, it is assumed the SpMV is computed via one of the GPU algorithms presented in Chapter~\ref{chap:gpu_rbffd}. For now the actual choice between custom OpenCL kernels and ViennaCL does not matter. Later, when we consider the scaling of this algorithm, the ViennaCL implementation is assumed. 
+In Chapter~\ref{chap:distributed_rbffd}, the SpMV was assumed run on the CPU. Herein, it is assumed to be computed via one of the GPU algorithms presented in Chapter~\ref{chap:gpu_rbffd}. For now the actual choice between custom OpenCL kernels and ViennaCL does not matter. Later, when we consider the scaling of this algorithm, the ViennaCL implementation is assumed. 
 
-Our original attempt at multi-GPU RBF-FD, described in \cite{BolligFlyerErlebacher2012}, utilized blocking communication (i.e., \texttt{MPI\_Send}/\texttt{MPI\_Recv}) for synchronization. The blocking communication functioned for debugging purposes, but was not practical. In Appendix~\ref{app:keeneland_alltoallv_benchmarks}, we provide supplementary data that demonstrates the result of replacing the blocking send and receives with an \texttt{MPI\_Alltoallv} (i.e., the GPU equivalent of Figure~\ref{fig:alltoallv_cpu}). In both cases the SpMV is a single kernel launch and the synchronization includes both an encode and decode phases (see \S~\ref{sec:local_ordering}). 
+Our original attempt at multi-GPU RBF-FD, described in \cite{BolligFlyerErlebacher2012}, utilized blocking communication (i.e., \texttt{MPI\_Send}/\texttt{MPI\_Recv}) for synchronization. The blocking communication functioned for debugging purposes, but was not practical. In Appendix~\ref{app:keeneland_alltoallv_benchmarks}, we provide supplementary data that demonstrates the result of replacing the blocking send and receives with an \texttt{MPI\_Alltoallv} (i.e., the GPU equivalent of Figure~\ref{fig:alltoallv_cpu}). In both cases the SpMV is a single kernel launch and the synchronization includes both an encode and decode phase (see \S~\ref{sec:local_ordering}). 
 
-The two multi-GPU algorithms presented here build on Figure~\ref{fig:no_decode_cpu} and Figure~\ref{fig:overlap_cpu}; the final collectives tested in \S~\ref{sec:mpi_improvements}. 
+The two multi-GPU algorithms presented in this chapter build on Figure~\ref{fig:no_decode_cpu} and Figure~\ref{fig:overlap_cpu}; the final collectives tested in \S~\ref{sec:mpi_improvements}. 
 
-\subsection{Non-overlapping Communication}
-
-Figure~\ref{fig:isendirecv_gpu} 
+Figure~\ref{fig:isendirecv_gpu} presents 
 
    \begin{enumerate}
     \item Transfer $\mathcal{O}$ from GPU to CPU
@@ -66,7 +64,7 @@ Figure~\ref{fig:isendirecv_gpu}
 
 When operating on multiple GPUs we avoid the copy-out or decode phase by requiring that the local ordering of nodes sort the set $\setDepend$ by the rank of the process sending each node. This way, when the MPI collective finishes and all values arrive contiguous by provider, the data can be copied directly to the GPU without reordering.
 
-\section{Overlapping with the GPU}
+\subsection{Overlapping with the GPU}
 
 Overlapping communication and GPU computation is enabled by two levels of asynchronous commands: 
 \begin{itemize} 
@@ -212,7 +210,9 @@ Compute Nodes   &   PPN  &   n=17   &   n=31   &   n=50   &   n=101   \\ \hline
 
 \section{Conclusion and Future Work}
 
-This chapter presented the first
+This chapter presented details of the first implementation of RBF-FD to run on multiple GPUs with overlapping communication and computation. The algorithm leverages non-blocking MPI communication as well as asynchronous GPU kernels to perform operations with the maximum possible overlap. 
+
+Strong scaling benchmarks show that the multi-GPU algorithm achieves 88.8 GFLOP/sec (i.e., a strong scaling efficiency of 31\%) on 32 M2070 GPUs for stencil size $n=50$, which is very reasonable considering the amount the GPU accelerates computation and inflates the relative cost of communication. %Even though the GPU accelerates computation and inflates the relative cost of communication, we find the efficiency for the algorithm to be well within reasonable bounds. 
 
 Future considerations include: 
 \begin{itemize} 
