--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -53,7 +53,7 @@ The two multi-GPU algorithms presented in this chapter build off of Figure~\ref{
 
 Figure~\ref{fig:isendirecv_gpu} presents the GPU accelerated equivalent of Figure~\ref{fig:no_decode_cpu} with \texttt{MPI\_Isend}/\texttt{MPI\_Irecv} communication and no decode process (i.e., nodes in $\setDepend$ are expected to be in contiguous by processor). In this case the communication has no overlap with computation of the SpMV. 
 
-The algorithm for Figure~\ref{fig:isendrecv_gpu} is as follows. First, the CPU launches \texttt{MPI\_Irecv} as soon as possible. When control returns from the non-blocking launch, the CPU queues a non-blocking memory transfer to copy $\setOutput$ from GPU down to CPU and the OpenCL command \texttt{clFinish} is executed to ensure the transfer completes before . 
+The algorithm for Figure~\ref{fig:isendrecv_gpu} is as follows. First, the CPU launches \texttt{MPI\_Irecv} as soon as possible. When control returns from the non-blocking launch, the CPU queues a non-blocking memory transfer to copy $\mathcal{O}$ from GPU down to CPU and the OpenCL command \texttt{clFinish} is executed to ensure the transfer completes before . 
  
 \begin{figure} 
 \centering
